--- a/project.ipynb
+++ b/project.ipynb
@@ -17,7 +17,7 @@
     "import requests\n",
     "import logging\n",
     "import sqlite3\n",
-    "import keys  # Import the keys module\n",
+    "import keys \\\n",
     "import os\n",
     "import json\n",
     "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
@@ -38,7 +38,8 @@
    "outputs": [],
    "source": [
     "transactions = pd.read_csv('Data/transactions.csv')\n",
-    "account_holders = pd.read_excel('Data/account_holders.xlsx')\n",
+    "account_holders = pd.read_csv('Data/account_holders.csv')\n",
+    "\n",
     "\n",
     "print(\"Transactions Columns:\", transactions.columns)\n",
     "print(\"Account Holders Columns:\", account_holders.columns)"
@@ -83,12 +84,26 @@
     "    account_holders['account_creation_date'] = pd.to_datetime(account_holders['account_creation_date'])\n",
     "else:\n",
     "    logging.warning('Column account_creation_date not found in account_holders dataset.')\n",
-    "\n",
-    "# Merging datasets\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Merge Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if 'account_id' in transactions.columns and 'account_id' in account_holders.columns:\n",
     "    merged_data = pd.merge(transactions, account_holders, on='account_id', how='inner')\n",
     "else:\n",
-    "    logging.error('account_id column not found in one of the datasets.')\n"
+    "    logging.error('account_id column not found in one of the datasets.')"
    ]
   },
   {
@@ -121,7 +136,7 @@
    "outputs": [],
    "source": [
     "conn = sqlite3.connect('Data/cleaned_data.db')\n",
-    "merged_data.to_sql('bank_transactions', conn, if_exists='replace', index=False)"
+    "merged_data.to_sql('bank_transactions', conn, if_exists='replace', index=False)\n"
    ]
   },
   {
@@ -141,26 +156,26 @@
     "    url = f'https://openexchangerates.org/api/latest.json?app_id={api_key}'\n",
     "    try:\n",
     "        response = requests.get(url)\n",
-    "        response.raise_for_status()  # Raise HTTPError for bad responses\n",
+    "        response.raise_for_status()  # Raise HTTP Error for bad responses\n",
     "        logging.info('Successfully fetched exchange rates data.')\n",
     "        return response.json()\n",
     "    except requests.exceptions.RequestException as e:\n",
     "        logging.error(f'Error fetching exchange rates data: {e}')\n",
     "        return None\n",
     "\n",
-    "# Function to fetch market data from the API\n",
+    "\n",
     "def fetch_market_data(api_key, symbol):\n",
     "    url = f'https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&symbol={symbol}&apikey={api_key}'\n",
     "    try:\n",
     "        response = requests.get(url)\n",
-    "        response.raise_for_status()  # Raise HTTPError for bad responses\n",
+    "        response.raise_for_status()  # Raise HTTP Error for bad responses\n",
     "        logging.info('Successfully fetched market data.')\n",
     "        return response.json()\n",
     "    except requests.exceptions.RequestException as e:\n",
     "        logging.error(f'Error fetching market data: {e}')\n",
     "        return None\n",
     "\n",
-    "# Fetching data from APIs using keys from keys.py\n",
+    "\n",
     "exchange_rates = fetch_exchange_rates(keys.EXCHANGE_RATES_API_KEY)\n",
     "market_data = fetch_market_data(keys.ALPHA_VANTAGE_API_KEY, keys.MARKET_SYMBOL)\n"
    ]
@@ -178,16 +193,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if exchange_rates:\n",
-    "    # Convert exchange rates to a DataFrame\n",
+    "if exchange_rates: # Convert exchange rates to a DataFrame\n",
     "    rates_df = pd.DataFrame(exchange_rates['rates'].items(), columns=['currency', 'rate'])\n",
     "    rates_df['timestamp'] = pd.to_datetime(exchange_rates['timestamp'], unit='s')\n",
     "    rates_df.to_sql('exchange_rates', conn, if_exists='replace', index=False)\n",
     "else:\n",
     "    logging.warning('Exchange rates data not available.')\n",
     "\n",
-    "if market_data:\n",
-    "    # Extract and convert market data to a DataFrame\n",
+    "if market_data:  # Extract and convert market data to a DataFrame\n",
     "    market_df = pd.DataFrame(market_data['Time Series (Daily)']).T\n",
     "    market_df.index = pd.to_datetime(market_df.index)\n",
     "    market_df.reset_index(inplace=True)\n",
@@ -210,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example: Total transactions per account\n",
+    "# Total transactions per account\n",
     "query1 = \"\"\"\n",
     "SELECT account_id, COUNT(transaction_id) as total_transactions\n",
     "FROM bank_transactions\n",
@@ -220,7 +233,7 @@
     "total_transactions.to_csv('out/total_transactions_per_account.csv', index=False)\n",
     "print(total_transactions.head())\n",
     "\n",
-    "# Example: Sum of transaction amounts per account\n",
+    "# Sum of transaction amounts per account\n",
     "query2 = \"\"\"\n",
     "SELECT account_id, SUM(transaction_amount) as total_amount\n",
     "FROM bank_transactions\n",
@@ -230,7 +243,7 @@
     "total_amounts.to_csv('out/total_amounts_per_account.csv', index=False)\n",
     "print(total_amounts.head())\n",
     "\n",
-    "# Example: Latest exchange rates\n",
+    "# Latest exchange rates\n",
     "query3 = \"\"\"\n",
     "SELECT * FROM exchange_rates\n",
     "\"\"\"\n",
@@ -238,7 +251,7 @@
     "exchange_rates_df.to_csv('out/exchange_rates.csv', index=False)\n",
     "print(exchange_rates_df.head())\n",
     "\n",
-    "# Example: Recent market data\n",
+    "# Recent market data\n",
     "query4 = \"\"\"\n",
     "SELECT * FROM market_data\n",
     "\"\"\"\n",
@@ -246,7 +259,7 @@
     "market_data_df.to_csv('out/market_data.csv', index=False)\n",
     "print(market_data_df.head())\n",
     "\n",
-    "conn.close()\n"
+    "conn.close()"
    ]
   }
  ],
